[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oldnews"
version = "0.0.3"
authors = [
  { name="Morley Weston", email="m.weston@ikmz.uzh.ch" },
]

description = "archive.org scraper"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/morleyjamesweston/oldnews-python"
"Bug Tracker" = "https://github.com/morleyjamesweston/oldnews-python/issues"